--- a/client/src/style.css
+++ b/client/src/style.css
@@ -2678,3 +2678,34 @@ html {
 .badge-icon {
   transition: transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
+
+@font-face {
+  font-family: 'TAN-ANGLETON';
+  src: url('/fonts/TAN-Angleton-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'TAN-ANGLETON-ITALIC';
+  src: url('/fonts/TAN-Angleton-Italic.ttf') format('truetype');
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
+.font-meld {
+  font-family: 'TAN-ANGLETON', serif;
+  font-size: 1.3rem;
+}
+
+.font-meld-italic {
+  font-family: 'TAN-ANGLETON-ITALIC', serif;
+  font-size: 1.3rem;
+}
+
+.font-meld-large {
+  font-family: 'TAN-ANGLETON-ITALIC', serif;
+  font-size: 2.5rem;
+}
+
