--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,3 +1,5 @@
+@import "./components/figma/global.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -293,7 +295,7 @@ html {
   font-family: Inter;
   font-style: normal;
   font-weight: 400;
-  src: url('$fonts/Inter-Regular.woff2') format('woff2');
+  src: url('/fonts/Inter-Regular.woff2') format('woff2');
   size-adjust: 94%;
 }
 
@@ -302,7 +304,7 @@ html {
   font-family: Inter;
   font-style: italic;
   font-weight: 400;
-  src: url('$fonts/Inter-Italic.woff2') format('woff2');
+  src: url('/fonts/Inter-Italic.woff2') format('woff2');
   size-adjust: 94%;
 }
 
@@ -311,7 +313,7 @@ html {
   font-family: Inter;
   font-style: normal;
   font-weight: 500;
-  src: url('$fonts/Inter-SemiBold.woff2') format('woff2');
+  src: url('/fonts/Inter-SemiBold.woff2') format('woff2');
   size-adjust: 94%;
 }
 
@@ -320,7 +322,7 @@ html {
   font-family: Inter;
   font-style: italic;
   font-weight: 500;
-  src: url('$fonts/Inter-SemiBoldItalic.woff2') format('woff2');
+  src: url('/fonts/Inter-SemiBoldItalic.woff2') format('woff2');
   size-adjust: 94%;
 }
 
@@ -329,7 +331,7 @@ html {
   font-family: Inter;
   font-style: normal;
   font-weight: 600;
-  src: url('$fonts/Inter-Bold.woff2') format('woff2');
+  src: url('/fonts/Inter-Bold.woff2') format('woff2');
   size-adjust: 94%;
 }
 
@@ -338,7 +340,7 @@ html {
   font-family: Inter;
   font-style: italic;
   font-weight: 600;
-  src: url('$fonts/Inter-BoldItalic.woff2') format('woff2');
+  src: url('/fonts/Inter-BoldItalic.woff2') format('woff2');
   size-adjust: 94%;
 }
 
@@ -347,7 +349,7 @@ html {
   font-family: Roboto Mono;
   font-style: normal;
   font-weight: 400;
-  src: url('$fonts/roboto-mono-latin-400-normal.woff2') format('woff2');
+  src: url('/fonts/roboto-mono-latin-400-normal.woff2') format('woff2');
 }
 
 @font-face {
@@ -355,7 +357,7 @@ html {
   font-family: Roboto Mono;
   font-style: normal;
   font-weight: 700;
-  src: url('$fonts/roboto-mono-latin-700-normal.woff2') format('woff2');
+  src: url('/fonts/roboto-mono-latin-700-normal.woff2') format('woff2');
 }
 
 @font-face {
@@ -363,7 +365,7 @@ html {
   font-family: Roboto Mono;
   font-style: italic;
   font-weight: 400;
-  src: url('$fonts/roboto-mono-latin-400-italic.woff2') format('woff2');
+  src: url('/fonts/roboto-mono-latin-400-italic.woff2') format('woff2');
 }
 
 /*
